--- a/typed-protocols/typed-protocols.cabal
+++ b/typed-protocols/typed-protocols.cabal
@@ -33,6 +33,7 @@ library
                    , TypeOperators
                    , BangPatterns
   build-depends:     base,
+                     singletons >= 3.0,
                      io-sim-classes
 
   hs-source-dirs:    src
